# crucible-eval-platform

./: .deployignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_ENVIRONMENT_CHECKLIST.md  Dockerfile  EVOLUTION_QUICKSTART.md  LICENSE  README.md  README_RUNNING.md  RUN.md  SAFE_SECURITY_CHECK.md  SECURITY.md  __main__.py  app.py  architecture.md  claude-summary.md  compare_queue_systems.py  constraints.txt  docker-compose.build.yml  docker-compose.celery.yml  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.with-proxy  free-tier-filter.json  interview-prep.md  logs.txt  metr-questions.md  migrate-evolution-to-src.sh  pyproject.toml  queue_comparison_results.json  requirements-dev.txt  requirements.txt  run-api.sh  run-migrations.sh  (+12 more)
.githooks/: pre-commit  pre-push
api/: Dockerfile  Dockerfile.optimized  README.md  __init__.py  celery_client.py  celery_constants.py  dlq_endpoints.py  favicon.py  microservices_gateway.py  models.py  openapi.json  openapi.yaml  openapi_validator.py  requirements.txt  schema.py
api-gateway/: Dockerfile  app.py
celery-worker/: Dockerfile  README.md  celerybeat-schedule  celeryconfig.py  dlq_config.py  executor_pool.py  executor_router.py  init_executor_pool.py  requirements.txt  retry_config.py  task_management.py  tasks.py  test_cancellation.py  test_celery.py  test_connection.py  test_retry_logic.py
celery_worker/: Dockerfile  __init__.py  celery_app.py  celeryconfig.py  executor_pool.py  tasks.py  (+4 more)
(+1367 files in other folders)
