[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-platform"
version = "0.1.0"
description = "Crucible Evaluation Platform for AI Safety"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core dependencies are minimal - platform runs with stdlib
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.104.1", "uvicorn[standard]>=0.24.0"]
monitoring = ["prometheus-client>=0.19.0"]
openapi = ["openapi-core>=0.18.2"]
all = ["fastapi>=0.104.1", "uvicorn[standard]>=0.24.0", "prometheus-client>=0.19.0", "openapi-core>=0.18.2"]

[project.scripts]
crucible = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]